--- a/kubernetes/pipeline.properties
+++ b/kubernetes/pipeline.properties
@@ -1,15 +1,15 @@
-version=
-namespace=
-image=
-appname=
-containerName=
+version=0.0.1
+namespace=default
+image=deyong/front-service
+appname=frontend-lab03
+containerName=frontend-lab03
 deployment=kubernetes/deployment.yaml
 service=kubernetes/service.yaml
 
 #Docker Settings
 dockerRegistry=https://index.docker.io/v1/
-credentialRegistry=
+credentialRegistry=docker-lab03
 
 #SonarQube
 sonarQubeURL=http://169.56.75.38:32001/
-sonarQubeProject=
+sonarQubeProject=frontend-lab03
