--- a/kubernetes/Jenkinsfile
+++ b/kubernetes/Jenkinsfile
@@ -46,7 +46,7 @@ containerTemplate(name: 'kubectl', image: 'roffe/kubectl', command: 'cat', ttyEn
     sh "sonar-scanner \
     -Dsonar.projectName=${sonarQubeProject} \
     -Dsonar.host.url=${sonarQubeURL} \
-    -Dsonar.projectBaseDir=./”  } }
+    -Dsonar.projectBaseDir=./"  } }
 		// #5 컨테이너 이미지 생성 Stage
     stage('Dockerizing') {
     container('docker') {
